# ROS2-CONTROL-HW-INTERFACE

./: .gitignore
controllers/: CMakeLists.txt  package.xml  rrbot_controller.xml
controllers/include/controllers/: rrbot_controller.hpp
controllers/src/: rrbot_controller.cpp
dxl_test/: CMakeLists.txt  package.xml
dxl_test/include/dxl_test/: xl330_driver.hpp
dxl_test/src/: test_motors.cpp
log/: latest_list
motor_interfaces/: CMakeLists.txt  cmd.txt  motor_interfaces.xml  package.xml
motor_interfaces/arduino_firmware/main/: main.ino
motor_interfaces/arduino_firmware/robot_controllers/: CMakeLists.txt
motor_interfaces/arduino_firmware/robot_controllers/include/robot_controllers/: robot_controller.hpp
motor_interfaces/arduino_firmware/simple_motor_control/: simple_motor_control.ino
motor_interfaces/arduino_firmware/simple_serial_receiver/: simple_serial_receiver.ino
motor_interfaces/arduino_firmware/simple_serial_transmitter/: simple_serial_transmitter.ino
motor_interfaces/config/: diff_drive_controller.yaml
motor_interfaces/include/motor_interfaces/: motor_interface.hpp
motor_interfaces/launch/: bringup_hardware_interface.launch.py  hardware.launch.py  real_hardware.launch.py
motor_interfaces/motor_interfaces/: mpu6050_driver.py  simple_lifecycle_node.py  simple_serial_receiver.py  simple_serial_transmitter.py
motor_interfaces/src/: motor_interface.cpp  simple_lifecycle_node.cpp  simple_serial_receiver.cpp  simple_serial_transmitter.cpp
motor_interfaces/urdf/: hardware_interface.ros2_control.xacro  my_robot.urdf.xacro
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/config/: my_robot_controllers.yaml
my_robot_bringup/launch/: cmd.txt  my_robot.launch.py  my_robot.launch.xml  test.txt
my_robot_description/: CMakeLists.txt  package.xml
my_robot_description/urdf/: arm.ros2_control.xacro  arm.xacro  mobile_base.ros2_control.xacro  my_robot_gazebo_ros2_control.xacro
robot_control/: robot_control.ino
robot_controllers/: package.xml
robot_controllers/resource/: controller_plugin.xml
robot_controllers/src/: robot_controller.cpp
robot_hardware_interface/: CMakeLists.txt  package.xml  robot_hardware_interface.xml
robot_hardware_interface/include/robot_hardware_interface/: arm_hardware_interface.hpp  draft_rolling_version.hpp  mobile_base_hardware_interface.hpp
robot_hardware_interface/resource/: robot_hardware_interface.xml
robot_hardware_interface/src/: arm_hardware_interface.cpp  draft_rolling_version.cpp  mobile_base_hardware_interface.cpp
